--- a/Bichotica2023/Bichotica2023/appsettings.json
+++ b/Bichotica2023/Bichotica2023/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ConcertDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
+
+
